force-app/main/default/objects/WorkOrder_Image__c/WorkOrder_Image__c.object-meta.xml
<CustomObject>
    <label>WorkOrder Image</label>
    <nameField>
        <label>Work Order Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkOrder Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>