force-app/main/default/objects/WorkOrder_Image__c/fields/Driver_Photo_Display_c__c.field-meta.xml
<CustomField>
    <fullName>Driver_Photo_Display_c__c</fullName>
    <label>Driver Photo Display</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>