force-app/main/default/objects/WorkOrder_Image__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <label>WorkOrder</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>WorkOrder Images</relationshipLabel>
    <relationshipName>Work_Order_Images</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>